# snippetbox-rs

./: .dockerignore  .env  Cargo.toml  Dockerfile.alpine  Dockerfile.distroless  README.md  docker-compose.yml
.sqlx/: query-52e7b299e3125f60d54e337b723909094b10e080d69f34bb63c34cf68953bf6d.json  query-683912415b8509fd50bf1e4bca080557dd619a7089d03328dc06bd8862b62e3d.json  query-6bc645ef0de0fbef7ef2c5a94bb00281377b85ce5cb4f6b8529d25cf392346a8.json  query-6f40d29c52a4481f1b05e93a5140c875c13b32b43b1d448e4b0d68936ad2cf28.json  query-aa48adce8b3564142727773a1a1b84f3e9ff1d990d49fdf4e17efc7bfbdd8bad.json  query-b805432c956d7f5d5cedbf3e1f0a5b8cb57776b1cd4f101bfed9395853c80b5f.json  query-c09304085749b3a6eb3566e871263dafb9dc66cceca31e7282811cdbecfed802.json  query-eb45f210fba0b2b48e5ace231ed45a8d451ed9aca175e537f54ecfe0b6d69049.json
configuration/: base.yaml  production.yaml
migrations/: 20230703090614_create_user.sql  20230712010632_add-dummy-records.sql
scripts/: init-db.sql  init-tables.sql  init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  session_state.rs  startup.rs  tmpl.rs
src/authentication/: middleware.rs  password.rs
src/domain/: email.rs  mod.rs  snip.rs  user.rs  user_cred.rs  user_name.rs  user_pass.rs
src/handlers/: snippet.rs  user.rs
src/models/: snippets.rs  users.rs
templates/: about.html  account.html  base.html  create.html  home.html  login.html  nav.html  password.html  signup.html  view.html
